--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
         <activity
             android:name="com.redsea.redsea.service.ui.activity.MainActivity"
             android:exported="true"
-            android:theme="@style/Base.Theme.RedSea"></activity>
+            android:theme="@style/Base.Theme.RedSea" />
     </application>
 
 </manifest>
